--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "vue": "^3.3.0",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.13",
-    "vuetify": "^3.0.0",
-    "@vueuse/head": "^1.0.0"
+    "vuetify": "^3.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
