--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mapbox/togeojson": "^0.16.2",
     "@mdi/font": "^7.0.96",
+    "@vueuse/head": "^2.0.0",
     "@we-gold/gpxjs": "^1.0.6",
     "@xmldom/xmldom": "^0.8.10",
     "chart.js": "^4.4.3",
