Add PDF report export for yellow/red running

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "gpx-parser-builder": "^1.1.0",
     "gpxparser": "^3.0.8",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "leaflet-easyprint": "^2.1.9",
     "leaflet-tilelayer-here": "^2.0.1",
     "luxon": "^3.4.4",
