--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@xmldom/xmldom": "^0.8.10",
     "chart.js": "^4.4.3",
     "chartjs-plugin-zoom": "^2.0.1",
+    "gifshot": "^0.4.5",
     "gpx-parser-builder": "^1.1.0",
     "gpxparser": "^3.0.8",
     "html2canvas": "^1.4.1",
