Add Phase Bubble Scatter analysis tool with worker processing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "node --no-warnings ./node_modules/.bin/vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node --test tests/*.test.mjs"
   },
   "dependencies": {
     "@mapbox/togeojson": "^0.16.2",
